--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.11.1",
+    "@react-email/components": "^1.0.1",
+    "@react-email/render": "^2.0.0",
     "@tailwindcss/typography": "^0.5.19",
     "@types/uuid": "^10.0.0",
     "bcryptjs": "^3.0.3",
@@ -19,6 +21,7 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-markdown": "^10.1.0",
+    "resend": "^6.5.2",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
