--- a/package.json
+++ b/package.json
@@ -40,5 +40,6 @@
   },
   "prisma": {
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
-  }
+  },
+  "postinstall": "prisma generate" 
 }
