--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-email/render": "^2.0.0",
     "@tailwindcss/typography": "^0.5.19",
     "@types/uuid": "^10.0.0",
+    "@vercel/analytics": "^1.5.0",
     "bcryptjs": "^3.0.3",
     "lucide-react": "^0.554.0",
     "next": "16.0.3",
@@ -41,5 +42,4 @@
   "prisma": {
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   }
-  
 }
