--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/typography": "^0.5.19",
     "@types/uuid": "^10.0.0",
     "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "bcryptjs": "^3.0.3",
     "lucide-react": "^0.554.0",
     "next": "16.0.3",
