--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-markdown": "^10.1.0",
+    "recharts": "^3.6.0",
     "resend": "^6.5.2",
     "uuid": "^13.0.0"
   },
