--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-email/render": "^2.0.0",
     "@tailwindcss/typography": "^0.5.19",
     "@types/uuid": "^10.0.0",
+    "@uploadthing/react": "^7.3.3",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "bcryptjs": "^3.0.3",
@@ -25,6 +26,7 @@
     "react-markdown": "^10.1.0",
     "recharts": "^3.6.0",
     "resend": "^6.5.2",
+    "uploadthing": "^7.7.4",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
